# a2a-samples

.github/workflows/: linter.yaml
blueprints/: README.md
blueprints/java/: README.md
blueprints/javascript/: .env.example  README.md  package.json
blueprints/javascript/src/: executor.ts  genkit.ts  index.ts  prompts.ts  tools.ts
blueprints/python/multi-agent-orchestrator/: .env.example  README.md  __main__.py  agent_executor.py  pyproject.toml
blueprints/python/simple-agent/: .env.example  README.md  __main__.py  agent_executor.py  pyproject.toml
blueprints/python/tool-using-agent/: .env.example  README.md  __main__.py  agent_executor.py  pyproject.toml  tools.py
samples/python/extensions/timestamp/: README.md  __init__.py  __main__.py  agent_executor.py  requirements.txt  test_client.py
samples/python/extensions/timestamp/timestamp_ext/: __init__.py  client.py  core.py  server.py
