[project]
name = "multi-agent-orchestrator-blueprint"
version = "1.0.0"
description = "A2A Multi-Agent Orchestrator Blueprint - Template for coordinating multiple agents"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core A2A SDK (includes both server and client)
    "a2a[server]>=0.2.3",

    # Optional: LLM for intelligent orchestration
    # "openai>=1.0.0",
    # "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
