[project]
name = "simple-agent-blueprint"
version = "1.0.0"
description = "A2A Simple Agent Blueprint - Template for creating basic A2A agents"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core A2A SDK
    "a2a[server]>=0.2.3",

    # Optional: Add your dependencies here
    # Examples:
    # "openai>=1.0.0",           # For OpenAI GPT models
    # "anthropic>=0.25.0",       # For Claude models
    # "google-generativeai",     # For Gemini models
    # "requests>=2.31.0",        # For HTTP API calls
    # "pydantic>=2.0.0",         # For data validation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
